fea-rs/test-data/compile-tests/mini-latin/bad/GDEF_conflicting_classes.fea
# adapted from a test on fonttools
table GDEF {
    GlyphClassDef [a b], [X], , ;
    GlyphClassDef [a b X], , , ;
} GDEF;

